--- a/www/index.html
+++ b/www/index.html
@@ -327,7 +327,7 @@
 <!--<script src="js/library/quo.js"></script>-->
 
 <!--<script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>-->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=true&libraries=places"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true&amp;libraries=places"></script>
 <script src="js/angular-google-maps.js"></script>
 <script src="js/ui-bootstrap-custom-0.4.0.js"></script>
 <!--<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.4.0.js"></script>-->
