--- a/www/index.html
+++ b/www/index.html
@@ -60,6 +60,10 @@
     <script src="cdv-plugin-fb-connect.js"></script>
 
     <script src="facebook-js-sdk.js"></script>
+    
+     <!-- --------------------------Google Maps-------------------------------- -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true&amp;libraries=places"></script>
+    <script src="js/angular-google-maps.js"></script>
 
     <!--&lt;!&ndash; Le HTML5 shim, for IE6-8 support of HTML5 elements &ndash;&gt;-->
     <!--&lt;!&ndash;[if lt IE 9]>-->
@@ -327,8 +331,7 @@
 <!--<script src="js/library/quo.js"></script>-->
 
 <!--<script src="http://maps.googleapis.com/maps/api/js?sensor=false&language=en"></script>-->
-<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=true&amp;libraries=places"></script>
-<script src="js/angular-google-maps.js"></script>
+
 <script src="js/ui-bootstrap-custom-0.4.0.js"></script>
 <!--<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.4.0.js"></script>-->
 
