--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="pragma" content="no-cache"/>
     <meta name="google" value="notranslate"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="user-scalable=no,width=device-width,height=device-height">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
 
     <!-- ---------------------------------------------------------------- -->
     <!-- -----------------------Blue------------------------------------- -->
