--- a/www/index.html
+++ b/www/index.html
@@ -23,14 +23,14 @@
     <link rel="apple-touch-startup-image" href="images_blue/demo.png">
     <link rel="apple-touch-startup-image" href="images_blue/ipad-startup-image.png">
 
-    <link rel="stylesheet" href="css/blue/css/style.css" type="text/css" media="all">
+    <!--<link rel="stylesheet" href="css/blue/css/style.css" type="text/css" media="all">-->
     <!--<link rel="stylesheet" href="css/blue/css/purple.css" type="text/css" media="all">-->
     <!--<link rel="stylesheet" href="{{cssKiosk}}" type="text/css" media="all">-->
-    <!--<link rel="stylesheet" href="{{cssStyle}}" type="text/css" media="all">-->
+    <link rel="stylesheet" href="{{cssStyle}}" type="text/css" media="all">
     <link rel="stylesheet" href="css/blue/css/mediaqueries.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/blue/css/font-awesome.css" type="text/css" media="all">
-    <!--<link rel="stylesheet" href="css/blue/css/kiosk.css" type="text/css" media="all">
-    <link rel="stylesheet" href="css/blue/calendar/css/calendar.css" type="text/css" media="all">-->
+    <link rel="stylesheet" href="css/blue/css/kiosk.css" type="text/css" media="all">
+    <link rel="stylesheet" href="css/blue/calendar/css/calendar.css" type="text/css" media="all">
 
     <!--[if lt IE 8]>
     <link rel="stylesheet" type="text/css" href="css/blue/css/ie.css"/><![endif]-->
