2nd-check img upload 24

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
     <!--<link rel="stylesheet" href="css/blue/css/style.css" type="text/css" media="all">-->
     <!--<link rel="stylesheet" href="css/blue/css/purple.css" type="text/css" media="all">-->
-    <!--<link rel="stylesheet" href="{{cssKiosk}}" type="text/css" media="all">-->
+    <link rel="stylesheet" href="{{cssKiosk}}" type="text/css" media="all">
     <link rel="stylesheet" href="{{cssStyle}}" type="text/css" media="all">
     <link rel="stylesheet" href="css/blue/css/mediaqueries.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/blue/css/font-awesome.css" type="text/css" media="all">
