--- a/www/index.html
+++ b/www/index.html
@@ -300,7 +300,7 @@
 <!--<script src="js/jquery/jquery-1.8.3.js"></script>-->
 <script src="js/jquery/jquery-ui.min.js"></script>
 <script src="js/library/timeago.js"></script>
-<script src="lib/parse/parse-min.js"></script>
+<script src="lib/parse/parse-1.1.12.min.js"></script>
 <!--<script type="text/javascript" src="js/blue/js/append-footer.js"></script>-->
 <!--<script src="js/jquery/maskedinput.js"></script>-->
 
