--- a/www/index.html
+++ b/www/index.html
@@ -5,11 +5,11 @@
     <title>Send Sweetness - Build Stronger Relationships</title>
     <meta name="description" content="Send Sweetness - Build Stronger Relationships">
     <meta name="author" content="Muhammad Kashif Abdullah">
-    <meta http-equiv="cache-control" content="max-age=0"/>
-    <meta http-equiv="cache-control" content="no-cache"/>
+    <!--<meta http-equiv="cache-control" content="max-age=0"/>-->
+    <meta http-equiv="cache-control" content="public"/>
     <meta http-equiv="expires" content="0"/>
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT"/>
-    <meta http-equiv="pragma" content="no-cache"/>
+    <!--<meta http-equiv="pragma" content="no-cache"/>-->
     <meta name="google" value="notranslate"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
