--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="sweetApp" ng-controller="AppController">
+<html lang="en" manifest="sweetness.appcache" type="text/cache-manifest" ng-app="sweetApp" ng-controller="AppController">
 <head>
     <meta charset="utf-8">
     <title>Send Sweetness - Build Stronger Relationships</title>
